<resources>
    <string name="app_name">Mini Projekt</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Max Mustermann</string>
    <string name="nav_header_subtitle">max@mustermann.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="action_deleteFolder">Delete all Folders</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_information">Information</string>

    <string name="drawer_inbox">Inbox</string>
    <string name="drawer_sent">Sent</string>
    <string name="drawer_drafts">Drafts</string>
    <string name="drawer_setting">Setting</string>
    <string name="drawer_archive">Archive</string>
    <string name="drawer_spam">Spam</string>

    <string name="your_password_filler">Your Password</string>
    <string name="your_email_address_filler">Your Email Address</string>
    <string name="your_full_name_filler">Your Full Name</string>


    <string name="show_from">From:</string>
    <string name="show_To">To: </string>
    <string name="show_subject">Subject</string>
    <string name="show_message">Message</string>
    <string name="show_cc">See CC</string>
    <string name="show_bcc">See BCC</string>
    <string name="show_date">Message received at: </string>

    <string name="menu_delete">Delete</string>
    <string name="menu_move_to">Move to</string>
    <string name="menu_move_archive">Move to Archive</string>
    <string name="menu_spam">Spam</string>
    <string name="menu_sent_to">Sent to</string>

    <string name="Sender">Absender</string>
    <string name="Betreff">Betreff</string>
    <string name="Beginn">E-mail Beginn</string>
    <string name="date">22. Apr.</string>

    <!--  Text  -->
    <string name="text_add_email">Add Email</string>
    <string name="text_settings">Settings</string>
    <string name="text_save">Save</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_create_message">Create Message</string>
    <string name="text_ok">Okay</string>

    <string name="text_delete_account">Delete selected account</string>
    <string name="text_switch_account">Switch to selected account</string>

    <string name="text_welcome">
        Hello friendly user. \n
        When creating an account,
        all your messages will be downloaded and
        \n  you may experience slower performance of the app.
        When you create a new account, \n
        you need to open all your folders once \n
        in order to not find any emails
        from the old account
        \n afterwards.
        \n It is the same for the option "Delete All Folders".
        \n This is a bug which could not be fixed yet.
        We wish you a lot of fun with our app.
        \n \n
        This app is in alpha version and created as part of a school project.
        Our app is fully available on Github.
    </string>

    <!--  hint -->
    <string name="hint_email_from">From (Email)</string>
    <string name="hint_email_to">To (Email)</string>
    <string name="hint_subject">Subject</string>
    <string name="hint_message">Message …</string>
    <string name="hint_your_name">Your Name</string>
    <string name="hint_your_email_address">Your Email Address</string>
    <string name="hint_your_password">Your Password</string>

    <string name="face_icon">face icon</string>

    <!-- Titles -->
    <string name="title_item_1">Item 1</string>
    <string name="title_item_2">Item 2</string>
    <string name="title_item_3">Item 3</string>
    <string name="title_item_4">Item 4</string>

    <string name="write_email">Write a Email</string>
    <string name="empty_not_saved">Email not saved because it was empty.</string>
    <string name="noAccountsAddedNavHeaderMessageEmail">No Account added</string>
    <string name="noAccountsAddedNavHeaderMessageName">No Email added</string>
    <string name="NoEmailsInDropDownMenuAvailable">None</string>
</resources>

