<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.noahvogt.snailmail.ui.mailboxes.inboxFolder.InboxFragment"
        android:label="@string/drawer_inbox"
        tools:layout="@layout/mailbox_inbox_fragment" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.noahvogt.snailmail.ui.mailboxes.sentFolder.SentFragment"
        android:label="@string/drawer_sent"
        tools:layout="@layout/mailbox_sent_fragment" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.noahvogt.snailmail.ui.mailboxes.draftFolder.DraftFragment"
        android:label="@string/drawer_drafts"
        tools:layout="@layout/mailbox_draft_fragment" />

    <fragment
        android:id="@+id/nav_archive"
        android:name="com.noahvogt.snailmail.ui.mailboxes.archiveFolder.ArchiveFragment"
        android:label="@string/drawer_archive"
        tools:layout="@layout/mailbox_archive_fragment" />

    <fragment
        android:id="@+id/nav_spam"
        android:name="com.noahvogt.snailmail.ui.mailboxes.spamFolder.SpamFragment"
        android:label="@string/drawer_spam"
        tools:layout="@layout/mailbox_spam_fragment" />

    <fragment
        android:id="@+id/nav_show"
        android:name="com.noahvogt.snailmail.ui.reader.ReaderFragment"/>
</navigation>