<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/messageFragment"
    android:orientation="vertical"
    tools:context=".ui.reader.ReaderFragment">


    <androidx.cardview.widget.CardView
        android:id="@+id/cardShowView"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:cardBackgroundColor="#5e35b1"
        tools:ignore="MissingConstraints">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/show_message_close_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="0dp"
                android:layout_marginStart="0dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:padding="8dp"
                app:tint="@android:color/white"
                android:src="@drawable/ic_baseline_close_24" />

            <ImageButton
                android:id="@+id/show_message_dots_button"
                android:layout_width="56dp"
                android:layout_height="match_parent"

                android:layout_marginStart="320dp"
                android:layout_marginLeft="320dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:padding="8dp"
                app:tint="@android:color/white"
                android:src="@drawable/ic_round_pending_24" />

            <ImageButton
                android:id="@+id/show_message_attach_button"
                android:layout_width="56dp"
                android:layout_height="match_parent"


                android:layout_marginStart="-114dp"
                android:layout_marginLeft="-114dp"
                android:layout_toEndOf="@id/show_message_dots_button"
                android:layout_toRightOf="@id/show_message_dots_button"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:padding="8dp"
                app:tint="@android:color/white"
                android:src="@drawable/ic_baseline_attachment_24" />


        </RelativeLayout>
    </androidx.cardview.widget.CardView>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="top">


            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/textview_border"

                android:layout_marginStart="12dp"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="12dp"
                android:layout_marginRight="12dp"
                android:layout_marginBottom="12dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="0"
                    android:layout_column="0"

                    android:layout_marginStart="12dp"
                    android:layout_marginLeft="12dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="12dp"
                    android:layout_marginRight="12dp"
                    android:layout_marginBottom="12dp"
                    android:text="@string/show_from"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1" />


                <TextView
                    android:id="@+id/show_From"
                    android:layout_width="288dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginLeft="12dp"

                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="12dp"
                    android:layout_marginRight="12dp"
                    android:layout_marginBottom="12dp"
                    android:hint="@string/show_from"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

            </GridLayout>

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/textview_border"

                android:layout_marginStart="12dp"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="12dp"
                android:layout_marginRight="12dp"
                android:layout_marginBottom="12dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="0"
                    android:layout_column="0"

                    android:layout_marginStart="12dp"
                    android:layout_marginLeft="12dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="12dp"
                    android:layout_marginRight="12dp"
                    android:layout_marginBottom="12dp"
                    android:text="@string/show_To"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1" />


                <TextView
                    android:id="@+id/show_To"
                    android:layout_width="306dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginLeft="12dp"

                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="12dp"
                    android:layout_marginRight="12dp"
                    android:layout_marginBottom="12dp"
                    android:hint="@string/show_To"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

            </GridLayout>


            <GridLayout
                android:background="@drawable/textview_border"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginStart="12dp"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="12dp"
                android:layout_marginRight="12dp"
                android:layout_marginBottom="12dp">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="0"
                    android:layout_column="0"

                    android:layout_marginStart="12dp"
                    android:layout_marginLeft="12dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="12dp"
                    android:layout_marginRight="12dp"
                    android:layout_marginBottom="12dp"
                    android:text="@string/show_subject"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1" />


                <TextView
                    android:id="@+id/show_subject"
                    android:layout_width="280dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginLeft="12dp"

                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="12dp"
                    android:layout_marginRight="12dp"
                    android:layout_marginBottom="12dp"
                    android:hint="@string/show_subject"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

            </GridLayout>

            <GridLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginStart="12dp"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="12dp"
                android:layout_marginRight="12dp"
                android:layout_marginBottom="2dp">

                <Button
                    android:id="@+id/show_cc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_marginStart="85dp"
                    android:layout_marginLeft="85dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="0dp"
                    android:text="@string/show_cc" />

                <Button
                    android:id="@+id/show_bcc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_row="0"
                    android:layout_column="1"
                    android:layout_marginStart="18dp"
                    android:layout_marginLeft="18dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="0dp"
                    android:text="@string/show_bcc" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_column="0"
                    android:layout_row="1"
                    android:text="@string/show_date"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textSize="20dp"/>

                <TextView
                    android:id="@+id/show_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_column="1"
                    android:layout_row="1"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textSize="20dp"/>

            </GridLayout>





            <LinearLayout
                android:background="@drawable/textview_border"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginStart="12dp"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="12dp"
                android:layout_marginRight="12dp"
                android:layout_marginBottom="12dp">

                <TextView
                    android:id="@+id/show_Message"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="200dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:hint="@string/show_message"

                    android:layout_marginStart="12dp"
                    android:layout_marginLeft="12dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="12dp"
                    android:layout_marginRight="12dp"
                    android:layout_marginBottom="12dp" />
            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <FrameLayout
        android:id="@+id/show_Layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>
