<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/messageFragment"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:cardPreventCornerOverlap="false"
        app:cardCornerRadius="0dp"
        app:cardBackgroundColor="#5e35b1">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/create_message_close_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:padding="8dp"
                android:src="@drawable/ic_baseline_close_24"
                app:tint="@android:color/white" />

            <TextView
                android:id="@+id/create_message_text_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_toEndOf="@+id/create_message_close_button"
                android:layout_toRightOf="@+id/create_message_close_button"
                android:text="@string/text_create_message"
                android:textColor="@android:color/white"
                android:textSize="20sp" />


            <ImageButton
                android:id="@+id/create_message_attach_button"
                android:layout_width="56dp"
                android:layout_height="match_parent"

                android:layout_marginStart="0dp"
                android:layout_marginLeft="0dp"
                android:layout_marginEnd="40dp"
                android:layout_marginRight="40dp"
                android:layout_toStartOf="@+id/create_message_send_button"
                android:layout_toLeftOf="@+id/create_message_send_button"
                android:layout_toEndOf="@+id/create_message_text_text"
                android:layout_toRightOf="@+id/create_message_text_text"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:padding="8dp"
                android:src="@drawable/ic_baseline_attachment_24"
                android:tint="@android:color/white" />

            <ImageButton
                android:id="@+id/create_message_dots_button"
                android:layout_width="56dp"
                android:layout_height="match_parent"

                android:layout_marginStart="50dp"
                android:layout_marginLeft="50dp"
                android:layout_marginEnd="-10dp"
                android:layout_marginRight="-10dp"
                android:layout_toStartOf="@+id/create_message_send_button"
                android:layout_toLeftOf="@+id/create_message_send_button"
                android:layout_toEndOf="@+id/create_message_text_text"
                android:layout_toRightOf="@+id/create_message_text_text"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:padding="8dp"
                android:src="@drawable/ic_round_pending_24"
                android:tint="@android:color/white" />

            <ImageButton
                android:id="@+id/create_message_send_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:background="?attr/selectableItemBackground"
                android:padding="8dp"
                android:src="@drawable/ic_baseline_arrow_forward_ios_24"
                android:textColor="@android:color/white"
                android:tint="@color/white" />

        </RelativeLayout>
    </androidx.cardview.widget.CardView>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="top">

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/create_message_sending_address_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginBottom="12dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/create_message_sending_address_text"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_email_from" />
    </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:id="@+id/create_message_receiving_address_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginStart="12dp"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="12dp"
                android:layout_marginRight="12dp"
                android:layout_marginBottom="12dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/create_message_receiving_address_text"
                    android:inputType="textEmailAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_email_to" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:id="@+id/create_message_cc_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginStart="12dp"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="12dp"
                android:layout_marginRight="12dp"
                android:layout_marginBottom="12dp"

                app:layout_constraintTop_toBottomOf="@+id/create_message_sending_address_layout"
                tools:layout_editor_absoluteX="1dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/create_message_cc_text"
                    android:inputType="textEmailAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="CC ..." />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:id="@+id/create_message_bcc_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginStart="12dp"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="12dp"
                android:layout_marginRight="12dp"
                android:layout_marginBottom="12dp"

                app:layout_constraintTop_toBottomOf="@+id/create_message_sending_address_layout"
                tools:layout_editor_absoluteX="1dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/create_message_bcc_text"
                    android:inputType="textEmailAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="BCC ..." />
            </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/create_message_subject_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginBottom="12dp"

        app:layout_constraintTop_toBottomOf="@+id/create_message_sending_address_layout"
        tools:layout_editor_absoluteX="1dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/create_message_subject_text"
            android:inputType="textEmailSubject"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_subject" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/create_message_body_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginBottom="12dp"

        app:layout_constraintTop_toBottomOf="@+id/create_message_sending_address_layout"
        tools:layout_editor_absoluteX="1dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/create_message_body_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="160dp"
            android:textAlignment="viewStart"
            android:hint="@string/hint_message"
            android:inputType="textMultiLine"
            android:gravity="start" />
    </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>